rancher/rancher-ui/rancher-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rancher-webui-8080
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080

---
kind: Endpoints
apiVersion: v1
metadata:
  name: rancher-webui-8080
subsets:
  - addresses:
      - ip: 172.93.188.136
    ports:
      - port: 8080
