rancher/rancher-ui/rancher-ui-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-webui-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - rancher.deoooo.me
      secretName: rancher-webui-tls-secret
  rules:
    - host: rancher.deoooo.me
      http:
        paths:
          - path: /
            backend:
              serviceName: rancher-webui-8080
              servicePort: 8080
